# archetype-install

./: .gitignore  Cargo.toml  PLAN-firstboot-integrity.md  PLAN.md  README.md
docs/: homed-user-flow-plan.md
spike/: repart-spike.sh
src/: app.rs  event.rs  firstboot.rs  install.rs  layout.rs  main.rs  preflight.rs  recovery.rs  theme.rs  tui.rs
src/disk/: enumerate.rs  mod.rs
src/repart/: generate.rs  mod.rs  model.rs  runner.rs
src/repart/templates/: 00-efi.conf  10-usr.conf  20-usr-verity.conf  30-usr-verity-sig.conf  40-usr-b.conf  50-usr-verity-b.conf  60-usr-verity-sig-b.conf
src/screens/: confirm.rs  disk_select.rs  firstboot.rs  mod.rs  preflight.rs  progress.rs  recovery.rs  result.rs  review.rs  sizing.rs  welcome.rs
